--- a/25p2vr6/index.html
+++ b/25p2vr6/index.html
@@ -43,14 +43,14 @@
         <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
         <a-nft
         type="nft"
-        url="https://klimowska.github.io/25p2vr6/image.jpg"
+        url="image"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
         smoothThreshold="5"
         >
         <a-entity
-            gltf-model="https://klimowska.github.io/25p2vr6/scene.glb"
+            gltf-model="scene.glb"
             scale="5 5 5"
             position="150 300 -100"
         >
