--- a/25p2vr6/index.html
+++ b/25p2vr6/index.html
@@ -6,7 +6,7 @@
     <title>VR viewer by Klimowska</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
     <style>
     .arjs-loader {
@@ -28,6 +28,8 @@
         color: white;
     }
     </style>
+
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
     <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
