--- a/25easyvr/index.html
+++ b/25easyvr/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR viewer by Klimowska</title>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/dev/aframe/build/aframe-ar.js"></script>
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-        <a-marker type="pattern" url="./pattern-hiro.patt">
-            <a-entity gltf-model="./scene.glb" scale="5 5 5" position="0 0 0">
+        <!-- <a-marker type="pattern" url="./pattern-hiro.patt"> -->
+        <a-marker preset="hiro">
+            <a-entity gltf-model="./scene.glb" scale="0.05 0.05 0.05" position="0 0 0">
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
