--- a/25oldvr/index.html
+++ b/25oldvr/index.html
@@ -21,16 +21,15 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="assets/asset.glb"
+                    src="./assets/asset.glb"
                 ></a-asset-item>
             </a-assets>
 
-            <!-- preset="custom" -->
             <a-marker
                 id="animated-marker"
                 type="pattern"
-                preset="jiro"
-                url="assets/marker.patt"
+                preset="custom"
+                url="./assets/marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
