--- a/25oldvr/index.html
+++ b/25oldvr/index.html
@@ -38,6 +38,7 @@
                 <a-entity
                     id="bowser-model"
                     scale="25.81676041194384 25.81676041194384 25.81676041194384"
+                    position="0 -10 0"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
