--- a/25oldvr/index2.html
+++ b/25oldvr/index2.html
@@ -27,7 +27,7 @@
 
             <a-nft
                 type="nft"
-                url="../25p2vr6/assets/image"
+                url="./assets/HERO"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
