--- a/25oldvr/index2.html
+++ b/25oldvr/index2.html
@@ -25,9 +25,10 @@
                 ></a-asset-item>
             </a-assets> -->
 
+            <!-- url="assets/HIRO" -->
             <a-nft
                 type="nft"
-                url="assets/HIRO"
+                url="/25oldvr/assets/HIRO"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
