--- a/t1/index.html
+++ b/t1/index.html
@@ -39,7 +39,7 @@
             type='nft' url='t1/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='../25easyvr/scene.glb'
+                gltf-model='./scene.glb'
                 scale="5 5 5"
                 position="150 300 -100"
                 >
