--- a/t1/index.html
+++ b/t1/index.html
@@ -38,10 +38,12 @@
         <a-nft
             type='nft' url='t1/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
+            <!-- scale="5 5 5"
+            position="150 300 -100" -->
             <a-entity
                 gltf-model='./scene.glb'
-                scale="5 5 5"
-                position="150 300 -100"
+                scale="25 25 25"
+                position="0 -10 0"
                 >
             </a-entity>
         </a-nft>
