--- a/t1/index.html
+++ b/t1/index.html
@@ -41,7 +41,7 @@
             <!-- scale="5 5 5"
             position="150 300 -100" -->
             <a-entity
-                gltf-model='./scene.glb'
+                gltf-model='./scene.gltf'
                 scale="25 25 25"
                 position="0 -10 0"
                 >
