--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -24,7 +24,7 @@
 <!-- rawgithack development URL -->
 <!-- <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script> -->
 <script src='https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.7/aframe/build/aframe-ar-nft.js' 
-  integrity="sha384-hXOAn1AExl0RlIhkH9Y4Rerf6afiuZTCMPxETsZmarpSf7+jqsBbV8jq+XkP8KD+"></script>
+  integrity="sha384-hXOAn1AExl0RlIhkH9Y4Rerf6afiuZTCMPxETsZmarpSf7+jqsBbV8jq+XkP8KD+" crossorigin="anonymous"></script>
 <!-- <script src='../../../../aframe/build/aframe-ar-nft.js'></script> -->
 
 
