--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -1,4 +1,5 @@
-<script src="https://cdn.jsdelivr.net/npm/aframe@1.6.0/dist/aframe-master.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.7.0/aframe.min.js"
+  integrity="sha384-grPCfm/taXar1D8JURBz4J6+IgyfpDdeFhb6kYzN+xLCDlck2n0ptRmk/09/Wfhh" crossorigin="anonymous"></script>
 
 <style>
   .arjs-loader {
