--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -1,7 +1,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.7.0/aframe.min.js"
   integrity="sha512-QRe0tMdbQUsh9BJOh+ijnsJaLoO68ku2a9/7HmQCIvqpeWRkqc4Ee0Ohjvt6y7Fx/ShFTLoL/H3ZgxZrXB7ERA==" crossorigin="anonymous"></script>
 
-<style>
+<!-- <style>
   .arjs-loader {
     height: 100%;
     width: 100%;
@@ -20,7 +20,7 @@
     font-size: 1.25em;
     color: white;
   }
-</style>
+</style> -->
 
 <!-- rawgithack development URL -->
 <!-- <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script> -->
