--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -1,7 +1,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.7.0/aframe.min.js"
   integrity="sha512-QRe0tMdbQUsh9BJOh+ijnsJaLoO68ku2a9/7HmQCIvqpeWRkqc4Ee0Ohjvt6y7Fx/ShFTLoL/H3ZgxZrXB7ERA==" crossorigin="anonymous"></script>
-
-<!-- <style>
+<link rel="stylesheet" href="/shared/loader.css" />
+<style>
   .arjs-loader {
     height: 100%;
     width: 100%;
@@ -15,12 +15,12 @@
     align-items: center;
   }
 
-  .arjs-loader div {
+  /* .arjs-loader div {
     text-align: center;
     font-size: 1.25em;
     color: white;
-  }
-</style> -->
+  } */
+</style>
 
 <!-- rawgithack development URL -->
 <!-- <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script> -->
@@ -31,9 +31,10 @@
 
 <body style='margin : 0px; overflow: hidden;'>
    <!-- minimal loader shown until image descriptors are loaded -->
-  <!-- <div class="arjs-loader">
-    <div>Loading, please wait...</div>
-  </div> -->
+  <div class="arjs-loader">
+    <image src="/shared/palette.svg" alt="loading" />
+    <!-- <div>Loading, please wait...</div> -->
+  </div>
     <a-scene
         vr-mode-ui='enabled: false;'
         renderer="logarithmicDepthBuffer: true; precision: medium;"
