--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -32,7 +32,7 @@
 <body style='margin : 0px; overflow: hidden;'>
    <!-- minimal loader shown until image descriptors are loaded -->
   <div class="arjs-loader">
-    <image src="/shared/palette.svg" alt="loading" />
+    <image src="/shared/palette.svg" alt="loading" class="loader" />
     <!-- <div>Loading, please wait...</div> -->
   </div>
     <a-scene
