--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -24,7 +24,7 @@
 <body style='margin : 0px; overflow: hidden;'>
     <!-- <l-loader-screen /> -->
     <div class="arjs-loader">
-        <image src="v-src/assets/palette.svg" alt="loading" class="loader" /> -->
+        <image src="/v-src/assets/palette.svg" alt="loading" class="loader" />
     </div>
     <a-scene vr-mode-ui='enabled: false;' renderer="logarithmicDepthBuffer: true; precision: medium;" embedded
         arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
