--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -22,10 +22,10 @@
 </style>
 
 <body style='margin : 0px; overflow: hidden;'>
-    <!-- <l-loader-screen /> -->
-    <div class="arjs-loader">
+    <l-loader-screen />
+    <!-- <div class="arjs-loader">
         <image src="/v-src/assets/palette.svg" alt="loading" class="loader" />
-    </div>
+    </div> -->
     <a-scene vr-mode-ui='enabled: false;' renderer="logarithmicDepthBuffer: true; precision: medium;" embedded
         arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
