--- a/t1/index8i.html
+++ b/t1/index8i.html
@@ -22,7 +22,7 @@
 </style>
 
 <body style='margin : 0px; overflow: hidden;'>
-    <l-loader-screen />
+    <l-loader-screen></l-loader-screen>
     <!-- <div class="arjs-loader">
         <image src="/v-src/assets/palette.svg" alt="loading" class="loader" />
     </div> -->
