--- a/v/25p2servomuxo/index.html
+++ b/v/25p2servomuxo/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR viewer by Klimowska</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.7.0/aframe.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.7/aframe/build/aframe-ar-nft.js'></script>
     <script type="module">import '/v-src/design/thirdparty/scene-with-model/scene-with-model.js';</script>
+
 </head>
 <body>
     <l-scene-with-model
