--- a/a/index.html
+++ b/a/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AR viewer by Klimowska</title>
+    <script type="module">
+      import "/a-src/features/augmented-reality/index.js";
+    </script>
   </head>
-  <body></body>
+  <body>
+    <!-- <l-augmented-reality-viewer
+      nft-filestem="nft"
+      model-url="./model.glb"
+      model-scale="1 1 1"
+      model-position="150 300 -100"
+    >
+    </l-augmented-reality-viewer> -->
+  </body>
 </html>
