--- a/a/25p2servomuxo/index.html
+++ b/a/25p2servomuxo/index.html
@@ -9,6 +9,7 @@
     </script>
   </head>
   <body>
+    <!-- nft creator: klimowska.github.io/a/nft -->
     <l-augmented-reality-viewer
       nft-filestem="nft"
       model-url="./model.glb"
