Add animation functionality

--- a/a/25p2servomuxo/index.html
+++ b/a/25p2servomuxo/index.html
@@ -15,6 +15,7 @@
       model-url="./model.glb"
       model-scale="1 1 1"
       model-position="150 300 -100"
+      animate="inactive"
     >
     </l-augmented-reality-viewer>
   </body>
