Uncomment code in example, modify comments

--- a/a/25p2servomuxo/index.html
+++ b/a/25p2servomuxo/index.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <!-- nft creator: klimowska.github.io/a/nft -->
+    <!-- nft creator: https://klimowska.github.io/a/nft -->
     <l-augmented-reality-viewer
       nft-filestem="nft"
       model-url="./model.glb"
