--- a/a/example/index.html
+++ b/a/example/index.html
@@ -9,14 +9,14 @@
     </script>
   </head>
   <body>
-    <!-- nft creator: klimowska.github.io/a/nft -->
-    <!-- <l-augmented-reality-viewer
+    <!-- nft creator: https://klimowska.github.io/a/nft -->
+    <l-augmented-reality-viewer
       nft-filestem="nft"
       model-url="./model.glb"
       model-scale="1 1 1"
       model-position="150 300 -100"
       animate="inactive"
     >
-    </l-augmented-reality-viewer> -->
+    </l-augmented-reality-viewer>
   </body>
 </html>
