--- a/a/25p2krioterapia/index.html
+++ b/a/25p2krioterapia/index.html
@@ -9,13 +9,13 @@
     </script>
   </head>
   <body>
-    <!-- nft creator: klimowska.github.io/a/nft -->
+    <!-- nft creator: https://klimowska.github.io/a/nft -->
     <l-augmented-reality-viewer
       nft-filestem="nft"
       model-url="./model.glb"
       model-scale="1 1 1"
       model-position="150 300 -100"
-      animate="active"
+      animate="inactive"
     >
     </l-augmented-reality-viewer>
   </body>
